@@ -831,6 +831,14 @@ class UserIF:
         return ret
 
 
+    # reload input
+    def reloadInput(self,jediTaskID,user,prodRole):
+        # kill
+        ret = self.taskBuffer.sendCommandTaskPanda(jediTaskID,user,prodRole,'incexec',comComment='{}',properErrorCode=True)
+        # return
+        return ret
+
+
     # retry task
     def retryTask(self,jediTaskID,user,prodRole,properErrorCode,newParams,noChildRetry):
         # retry with new params
@@ -1966,6 +1974,33 @@ def finishTask(req,jediTaskID=None,properErrorCode=None,soft=None):
             return pickle.dumps((False,'jediTaskID must be an integer'))
     ret = userIF.finishTask(jediTaskID,user,prodRole,properErrorCode,
                             qualifier)
+    return pickle.dumps(ret)
+
+
+
+# reload input
+def reloadInput(req,jediTaskID):
+    # check security
+    if not isSecure(req):
+        if properErrorCode:
+            return pickle.dumps((100,'secure connection is required'))
+        else:
+            return pickle.dumps((False,'secure connection is required'))
+    # get DN
+    user = None
+    if req.subprocess_env.has_key('SSL_CLIENT_S_DN'):
+        user = _getDN(req)        
+    # check role
+    prodRole = _isProdRoleATLAS(req)
+    # check jediTaskID
+    try:
+        jediTaskID = long(jediTaskID)
+    except:
+        if properErrorCode:
+            return pickle.dumps((101,'jediTaskID must be an integer'))        
+        else:
+            return pickle.dumps((False,'jediTaskID must be an integer'))
+    ret = userIF.reloadInput(jediTaskID,user,prodRole)
     return pickle.dumps(ret)
 
 
